# git-insights-agent

./: .gitignore  CLAUDE.md  OPENROUTER_GUIDE.md  README.md  config-multi-branch.yaml  cost-comparison.md  debug_git_repo.py  example-config.yaml  example-openrouter-models.yaml  multi-branch-analysis.md  pyproject.toml  report.md  sap-integrations-analysis.md  test-config.yaml  test-multi-branch.md  test-ray-jobs-analysis.md  test-ray-jobs.yaml  test-report.md  test_branch_discovery.py
.kiro/specs/git-batch-analyzer/: requirements.md  tasks.md
git_batch_analyzer/: __init__.py  __main__.py  main.py  types.py
git_batch_analyzer/config/: __init__.py  loader.py  models.py
git_batch_analyzer/tools/: __init__.py  cache_tool.py  calc_tool.py  email_tool.py  git_tool.py  llm_tool.py  md_tool.py  user_analysis_tool.py  user_tool.py
git_batch_analyzer/workflow/: __init__.py  graph.py  nodes.py
reports/: ray-jobs-chore_change-sap-base(url)20250812-20250819.md  sap-admin-feature_fix-start(stop)20250812-20250819.md  sap-cdk(develop)20250812-20250819.md  sap-cdk(main)20250812-20250819.md  sap-integrations(develop)20250812-20250819.md  sap-integrations(qa)20250812-20250819.md  sap-odata-collector-feature_change(secret)20250812-20250819.md
tests/: __init__.py  test_cache_tool.py  test_calc_tool.py  test_cli_integration.py  test_config.py  test_git_tool.py  test_llm_tool.py  test_main_cli.py  test_md_tool.py  test_report_nodes.py  test_types.py  test_workflow_integration.py  test_workflow_nodes.py
